# rust-graphql-client

./: Cargo.toml  README.md
src/: main.rs  query.graphql  schema.graphql  schema.json
