[package]
name = "graphql-client-rust"
version = "0.1.0"
authors = ["Pete <pavlovskipetko@abv.bg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.9.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
reqwest = {version = "0.11.0", features = ["json"]}
tokio = {version = "1.1.1", features = ["full"]}
exitfailure = "0.5.1"